--- a/templates/vote.html
+++ b/templates/vote.html
@@ -1,12 +1,13 @@
 {% load staticfiles %}
 <h1>Here you can vote</h1>
-<img src="{% static "thumbsup.jpg" %}" />
+
 {%  if poll %}
     <ul>
         {%  for choice in poll.choice_set.all %}
             <li>{{  choice.choice }}</li>
-            <li>{{  choice.votes }}<a href="/polls/{{ poll.id }}/"></a></a></li>
-            <br>
+            <li>{{  choice.votes }}</li>
+            <li><a href="/polls/{{ choice.id }}/"><img src="{% static "thumbsup.jpg" %}" width="50" height="50" /></a></li>
+            <br><br><br>
         {%  endfor %}
     </ul>
 {% else %}
