--- a/templates/details.html
+++ b/templates/details.html
@@ -1,6 +1,20 @@
+{% load staticfiles %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+  </head>
+  <body>
+<h2><a href="/polls">Home</a></h2>
 <h1>Details page</h1>
 {%  if poll %}
-    <ul>
+    <ul class="list-unstyled">
         {%  for choice in poll.choice_set.all %}
             <li>{{  choice.choice }} &nbsp;&nbsp;&nbsp;=>  <a href="/polls/{{ poll.id }}/vote/{{ choice.id }}">Vote here</a></li>
             <br>
@@ -9,3 +23,5 @@
 {% else %}
     <p>no details available</p>
 {% endif %}
+ </body>
+</html>
