--- a/templates/details.html
+++ b/templates/details.html
@@ -1,3 +1,4 @@
+{% extends "base_template.html" %}
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
@@ -11,6 +12,7 @@
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
   </head>
   <body>
+  {% block content %}
 <h2><a href="/polls">Home</a></h2>
 <h1>Details page</h1>
 {%  if poll %}
@@ -23,5 +25,7 @@
 {% else %}
     <p>no details available</p>
 {% endif %}
+
+  {% endblock %}
  </body>
 </html>
