--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+{% extends "base_template.html" %}
+
+{% block content %}
 <h1>All are in polls index page</h1>
 <h2><a href="/polls/add">Add new poll</a></h2>
 
@@ -12,3 +15,5 @@
 {%  else %}
 <p>No polls available</p>
 {%  endif %}
+
+{% endblock %}
