--- a/templates/details.html
+++ b/templates/details.html
@@ -18,7 +18,7 @@
 {%  if poll %}
     <ul class="list-unstyled">
         {%  for choice in poll.choice_set.all %}
-            <li>{{  choice.choice }} &nbsp;&nbsp;&nbsp;=>  <a href="/polls/{{ poll.id }}/vote/{{ choice.id }}">Vote here</a></li>
+            <li>{{  choice.choice }} &nbsp;&nbsp;&nbsp;=>  <a href="/polls/{{ poll.id }}/vote/{{ choice.id }}">Vote here</a>&nbsp;&nbsp;&nbsp;=>  <a href="/polls/{{ poll.id }}/delete/{{ choice.id }}">Delete choice</a> </li>
             <br>
         {%  endfor %}
     </ul>
