Added django-registration modules and templates

--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -1,12 +1,9 @@
-{% extends "base_template.html" %}
-{% load bootstrap3 %}
-
-{% block title %}Login{% endblock %}
+{% extends 'base_template.html' %}
+{% load i18n %}
 
 {% block content %}
-<div class="container">
-  <h1>Logout</h1>
-  <p class="lead">You are now logged out.</p>
-  <p><a href="{% url 'home' %}">Home</a></p>
-</div>
+    <section>
+        <h3>{% trans "You've been logged out." %}</h3>
+        <p><a href="{% url "django.contrib.auth.views.login" %}">{% trans 'Log in again' %}</a></p>
+    </section>
 {% endblock %}
