--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,16 +1,9 @@
-{% extends "base_template.html" %}
+{% extends 'base.html' %}
+{% load i18n %}
 
-{% block title %}Password reset complete{% endblock %}
-
-{% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-8">
-      <h1>Password reset complete</h1>
-      <p>Password successfully reset.</p>
-      <p><a href="{% url 'django.contrib.auth.views.login' %}">Sign in</a>
-      <p><a href="{% url 'demo.views.home' %}">Home</a></li></p>
+{% block container %}
+    <div class="content">
+        <h3>{% trans 'Password reset complete' %}</h3>
+        <p>{% trans "Your password has been set.  You may go ahead and log in now." %}</p>
     </div>
-  </div>
-</div>
 {% endblock %}
