--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,46 +1,44 @@
-{% extends "base_template.html" %}
-{% load bootstrap3 %}
+{% extends 'base.html' %}
+{% load i18n %}
 
-{% block title %}Password reset{% endblock %}
-
-{% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-sm-offset-2 col-sm-10">
-      <h1>Password reset</h1>
+{% block container %}
+    <div class="content">
+    {% if validlink %}
+        {% if form.errors %}
+            <div class="alert alert-block fade in">
+                <a class="close" data-dismiss="alert" href="#">×</a>
+                <p>{% blocktrans count form.errors.items|length as counter %}Please correct the error below.{% plural %}Please correct the errors below.{% endblocktrans %}</p>
+                <script type="text/javascript">
+                    $(document).ready(function(){
+                        $(".alert-message").alert();
+                    });
+                </script>
+            </div>
+        {% endif %}
+        <form action="" method="post">{% csrf_token %}
+            <fieldset>
+                <legend>{% trans 'Password reset unsuccessful' %}</legend>
+                <div class="clearfix">
+                    <div class="input">
+                        {% trans "Please enter your new password twice so we can verify you typed it in correctly." %}
+                    </div>
+                </div>
+                {% for field in form %}
+                    {% include 'registration/form_field.html' %}
+                {% endfor %}
+                <div class="actions">
+                    <input type="submit" class="btn primary" value="{% trans 'Change my password' %}">
+                </div>
+            </fieldset>
+            <script type="text/javascript">
+                document.forms[1].elements[2].focus();
+            </script>
+        </form>
+    {% else %}
+        <h3>{% trans 'Password reset unsuccessful' %}</h3>
+        <p>
+            {% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}
+        </p>
+    {% endif %}
     </div>
-  </div>
-
-{% if validlink %}
-  <form action="" method="post" role="form" class="form-horizontal">
-    {% csrf_token %}
-    {% bootstrap_form form layout='horizontal' %}
-
-    {% buttons %}
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">
-        Change password
-      </button>
-    </div>
-    {% endbuttons %}
-  </form>
-
-{% else %}
-
-  <div class="row">
-    <div class="alert alert-danger col-sm-offset-2 col-sm-6">
-      <p class="lead"><strong>Password reset failed!</strong></p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-offset-1 col-sm-10">
-      <p class="lead">The password reset link was invalid, 
-        possibly because it has already been used.</p>
-      <p><a href="{% url 'django.contrib.auth.views.login' %}">Sign in</a>
-    </div>
-  </div>
-
-{% endif %}
-
-</div>
 {% endblock %}
