--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,49 +1,37 @@
-{% extends "base_template.html" %}
-{% load bootstrap3 %}
-
-{% block title %}Sign in{% endblock %}
+{% extends 'base_template.html' %}
+{% load i18n %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-sm-offset-2 col-sm-10">
-      <h1>Sign in</h1>
-      <p>Not yet registered?  
-        <a href="{% url 'registration_register' %}">Register now for free!</a></p>
-      <p>Trouble signing in?  
-        <a href="{% url 'django.contrib.auth.views.password_reset' %}">Reset password.</a></p>
-    </div>
-  </div>
 
-  {% if form.errors %}
-  <div class="row">
-    <div class="alert alert-danger col-sm-offset-2 col-sm-6">
-      <p><strong>Login failed. Try again...</strong></p>
-    </div>
-  </div>
-  {% endif %}
+        <div class="content">
 
-  <form action="{% url 'django.contrib.auth.views.login' %}" 
-      method="post" 
-      role="form" 
-      class="form-horizontal">
-    {% csrf_token %}
+            {% if form.errors %}
+                <div class="alert alert-block fade in">
+                    <a class="close" data-dismiss="alert" href="#">×</a>
+                    <p><strong>{% trans "Oh snap!" %}</strong> {% trans "Please enter a correct username and password. Note that both fields are case-sensitive." %}</p>
+                </div>
+            {% endif %}
+            <form action="{% url "django.contrib.auth.views.login" %}" method="post" id="login-form">{% csrf_token %}
+                <fieldset>
+                    <legend>{% trans 'Log in' %}</legend>
+                    {% for field in form %}
+                        {% include 'registration/form_field.html' %}
+                    {% endfor %}
+                    <div class="actions">
+                        <input type="submit" class="btn primary" value="{% trans 'Log in' %}">&nbsp;<button type="reset" class="btn">{% trans 'Cancel' %}</button>
+                    </div>
+                </fieldset>
+            </form>
+            <p><a href="{% url "django.contrib.auth.views.password_reset" %}">{% trans "Reset my password" %}</a></p>
+            <script type="text/javascript">
+                $(function(){
+                    $(".alert-message").alert();
+                    $('#mainForm').submit(function(){
+                        $('#submit').button('loading');
+                    })
+                });
+                document.forms[1].elements[2].focus();
+            </script>
+        </div>
 
-    {% bootstrap_field form.username layout='horizontal' %}
-    {% bootstrap_field form.password layout='horizontal' %}
-    {% if next %}
-      <input type="hidden" name="next" value="{{ next }}" />
-    {% else %}
-      <input type="hidden" name="next" value="{% url 'home' %}" />
-    {% endif %}
-    {% buttons %}
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">
-        {% bootstrap_icon "star" %} Login
-      </button>
-    </div>
-    {% endbuttons %}
-  </form>
-
-</div>
 {% endblock %}
