--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,16 +1,9 @@
-{% extends "base_template.html" %}
+{% extends 'base.html' %}
+{% load i18n %}
 
-{% block title %}Password change complete{% endblock %}
-
-{% block content %}
-<div class="container">
-  <div class="row">
-	<div class="col-md-8">
-	  <h1>Password changed!</h1>
-	  <p>Password successfully changed.</p>
-      <p><a href="{% url 'demo.views.profile' %}">Profile</a></p>
-      <p><a href="{% url 'demo.views.home' %}">Home</a></li></p>
-    </div>
-  </div>
-</div>
+{% block container %}
+    <div class="content">
+        <h3>{% trans 'Password change successful' %}</h3>
+        <p><a href="/">{% trans 'Back' %}</a></p>
+    </div>   
 {% endblock %}
