--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,14 +1,9 @@
-{% extends "base_template.html" %}
+{% extends 'base.html' %}
+{% load i18n %}
 
-{% block title %}Password reset successful{% endblock %}
-
-{% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-8">
-      <h1>Password has been reset!</h1>
-      <p>An email with instructions for setting a new password has been sent.</p>
+{% block container %}
+    <div class="content">
+        <h3>{% trans 'Password reset successful' %}</h3>
+        <p>{% trans "We've e-mailed you instructions for setting your password to the e-mail address you submitted. You should be receiving it shortly." %}</p>
     </div>
-  </div>
-</div>
 {% endblock %}
