--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -1,15 +1,8 @@
-{% extends "base_template.html" %}
-
-{% block title %}Registration complete{% endblock %}
+{% extends 'base_template.html' %}
+{% load i18n %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-	<div class="col-md-8">
-	  <h1>Registration complete!</h1>
-
-	  <p>An activation email has been sent.</p>
-	</div>
-  </div>
-</div>
+    <div class="content">
+        <h3>{% trans 'Registration successful. An email has been sent your registered Email id.' %}</h3>
+    </div>
 {% endblock %}
