--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,6 +5,9 @@
 
         <div class="content">
 
+            {% if flag %}
+                <div class="alert alert-danger">Please log in to add a new poll</div>
+            {% endif %}
             {% if form.errors %}
                 <div class="alert alert-block fade in">
                     <a class="close" data-dismiss="alert" href="#">×</a>
